// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup component should render correctly with all the default props 1`] = `
.c11 {
  font-size: 16px;
}

.c11 * {
  fill: #555;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 0px 0px 8px;
  cursor: pointer;
}

.c2 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  margin: 8px 0px;
  display: grid;
  grid-template-columns: 20% 80%;
  grid-template-areas: 'label field' 'random description';
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  margin: 8px;
  display: inline-grid;
  grid-template-columns: max-content auto;
  grid-template-areas: 'field label' 'description random';
}

.c3 .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c6 {
  width: 16px;
  height: 16px;
  position: relative;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  border-radius: 15%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  width: 0;
  height: 0;
  z-index: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 .c10 {
  width: 100%;
  height: 100%;
}

.c7 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c7:focus {
  outline: none;
}

.c7:checked ~ .c8 {
  width: calc(70%);
  height: calc(70%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <label
          class="c4 c5"
          for="Apple"
        >
          Apple
        </label>
        <div
          class="c6"
        >
          <input
            class="c7"
            id="Apple"
            name=""
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <svg
              class="c10 c11"
              height="1em"
              viewBox="0 0 18 14"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                fill="none"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <label
          class="c4 c5"
          for="Orange"
        >
          Orange
        </label>
        <div
          class="c6"
        >
          <input
            class="c7"
            id="Orange"
            name=""
            type="checkbox"
          />
          <div
            class="c8 c9"
          >
            <svg
              class="c10 c11"
              height="1em"
              viewBox="0 0 18 14"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                fill="none"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should render correctly with all the props given 1`] = `
.c12 {
  font-size: 16px;
}

.c12 * {
  fill: #555;
}

.c6 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 0px 0px 8px;
  cursor: pointer;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 0px 8px 0px;
}

.c2::after {
  color: red;
  content: ' *';
}

.c4 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c13 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  margin: 8px;
  display: inline-grid;
  grid-template-columns: max-content auto;
  grid-template-areas: 'field label' 'description random';
}

.c5 .c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 {
  margin: 8px 0px;
  display: grid;
  grid-template-areas: 'label' 'field' 'description';
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  width: 16px;
  height: 16px;
  position: relative;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  border-radius: 15%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  width: 0;
  height: 0;
  z-index: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 .c11 {
  width: 100%;
  height: 100%;
}

.c8 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c8:focus {
  outline: none;
}

.c8:checked ~ .c9 {
  width: calc(70%);
  height: calc(70%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1 c2"
      required=""
    >
      Fruits
    </label>
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <label
          class="c1 c6"
          for="Apple"
        >
          Apple
        </label>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Apple"
            name="fruits"
            required=""
            type="checkbox"
          />
          <div
            class="c9 c10"
          >
            <svg
              class="c11 c12"
              height="1em"
              viewBox="0 0 18 14"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                fill="none"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <label
          class="c1 c6"
          for="Orange"
        >
          Orange
        </label>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Orange"
            name="fruits"
            required=""
            type="checkbox"
          />
          <div
            class="c9 c10"
          >
            <svg
              class="c11 c12"
              height="1em"
              viewBox="0 0 18 14"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 11.17L1.83 7 .41 8.41 6 14 18 2 16.59.59z"
                fill="none"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
